# NX1recomp

./: .gitignore  CHANGELOG.md  README.md
XenosRecomp/XenosRecomp/: CMakeLists.txt  fxc_compiler.cpp  fxc_compiler.h  main.cpp  pch.h  shader_common.h  shader_recompiler.cpp  sm3_transform.cpp  sm3_transform.h
nx1_mp/: CMakeLists.txt  nx1_mp_manifest.toml
nx1_mp/config/: hooks.toml  ida_functions.toml  ida_functions_0-nightly_mp_maps.toml
nx1_mp/docs/: guest-d3d-pipeline.md
nx1_mp/src/: main.cpp  nx1_mp.rc.in  nx1_mp_app.h  platform_compat.cpp
nx1_mp/src/d3d9/: d3d9_cmdbuf.cpp  d3d9_cmdbuf.h  d3d9_constants.cpp  d3d9_constants.h  d3d9_flat_map.h  d3d9_hooks.cpp  d3d9_log.h  d3d9_overlay.cpp  d3d9_overlay.h  d3d9_renderer.cpp  d3d9_renderer.h  d3d9_resources.cpp  d3d9_resources.h  d3d9_shaders.cpp  d3d9_shaders.h  guest_d3d.cpp  guest_d3d.h  nx1_sm3_shader_cache.h  pool_watch.cpp
nx1_sp/: CMakeLists.txt  nx1_sp_demo_probe_manifest.toml  nx1_sp_manifest.toml  nx1_sp_manifest_1-nx1sp.toml  nx1_sp_manifest_4-nx1sp_demo.toml  nx1_sp_manifest_demo.toml
nx1_sp/config/: hooks.toml  hooks_1-nx1sp.toml  ida_functions.toml  map_functions.toml  map_functions_1-nx1sp.toml
nx1_sp/src/: main.cpp  nx1_devgui_overlay.cpp  nx1_devgui_overlay.h  nx1_sp_app.h  platform_compat.cpp
rexglue-sdk/: CMakeLists.txt
rexglue-sdk/cmake/: rexglue_helpers.cmake
rexglue-sdk/docs/: NX1_NETPLAY.md
rexglue-sdk/include/rex/: cvar.h  rex_app.h  runtime.h
rexglue-sdk/include/rex/codegen/: function_graph.h  function_scanner.h
rexglue-sdk/include/rex/graphics/: command_processor.h  flags.h  graphics_system.h  shared_memory.h
rexglue-sdk/include/rex/graphics/d3d12/: command_processor.h  nx1_native_shader_cache.h  pipeline_cache.h  shared_memory.h
rexglue-sdk/include/rex/graphics/pipeline/shader/: shader.h
rexglue-sdk/include/rex/graphics/vulkan/: command_processor.h
rexglue-sdk/include/rex/input/: input.h
rexglue-sdk/include/rex/input/mnk/: mnk_input_driver.h  mouse_look.h
rexglue-sdk/include/rex/system/: debug_hud.h  discord_presence.h  xlive_web_client.h  xsession.h  xsocket.h
rexglue-sdk/include/rex/system/xam/: user_profile.h
rexglue-sdk/include/rex/ui/: keybinds.h  presenter.h  ui_event.h  window.h  window_listener.h  window_win.h
rexglue-sdk/include/rex/ui/d3d12/: d3d12_presenter.h
rexglue-sdk/include/rex/ui/overlay/: settings_overlay.h
rexglue-sdk/src/codegen/: codegen_writer.cpp  function_graph.cpp  function_scanner.cpp  phase_discover.cpp  phase_register.cpp
rexglue-sdk/src/codegen/builders/: context.cpp  control_flow.cpp
rexglue-sdk/src/core/: CMakeLists.txt  cvar.cpp
rexglue-sdk/src/graphics/: CMakeLists.txt  command_processor.cpp  graphics_system.cpp  shared_memory.cpp
rexglue-sdk/src/graphics/d3d12/: command_processor.cpp  nx1_native_shader_cache.cpp  pipeline_cache.cpp  render_target_cache.cpp  shared_memory.cpp
rexglue-sdk/src/graphics/pipeline/render_target/: cache.cpp
rexglue-sdk/src/graphics/pipeline/shader/: shader.cpp  translator.cpp
rexglue-sdk/src/graphics/pipeline/texture/: cache.cpp
rexglue-sdk/src/graphics/shaders/: nx1_native_present_copy.cs.hlsl
rexglue-sdk/src/graphics/shaders/bytecode/d3d12_5_1/: nx1_native_present_copy_cs.h
rexglue-sdk/src/graphics/vulkan/: command_processor.cpp
rexglue-sdk/src/input/: input_system.cpp
rexglue-sdk/src/input/mnk/: mnk_input_driver.cpp
rexglue-sdk/src/kernel/xam/: xam_input.cpp  xam_misc.cpp  xam_net.cpp  xam_user.cpp
rexglue-sdk/src/kernel/xam/apps/: xgi_app.cpp
rexglue-sdk/src/kernel/xbdm/: xbdm_misc.cpp
rexglue-sdk/src/kernel/xboxkrnl/: xboxkrnl_memory.cpp  xboxkrnl_video.cpp
rexglue-sdk/src/system/: CMakeLists.txt  debug_hud.cpp  discord_presence.cpp  function_dispatcher.cpp  kernel_state.cpp  runtime.cpp  user_module.cpp  xex_module.cpp  xlive_web_client.cpp  xmodule.cpp  xsession.cpp  xsocket.cpp  xthread.cpp
rexglue-sdk/src/system/xam/: user_profile.cpp
rexglue-sdk/src/ui/: imgui_drawer.cpp  presenter.cpp  rex_app.cpp  window.cpp  window_win.cpp
rexglue-sdk/src/ui/d3d12/: d3d12_presenter.cpp
rexglue-sdk/src/ui/overlay/: console_overlay.cpp  settings_overlay.cpp
tools/: Convert-MsvcMapToRexFunctions.ps1  Start-Nx1MpDevmap.ps1  Start-Nx1SpDevmap.ps1  blendps.txt  cand.txt  nx1_xenosrecomp_decompile.ps1  shader_cache.h  sid.txt
tools/sm3_feasibility/: sm3_rewrite.py
tools/texture_analysis/: README.md  checkraw.py  drift.py  dupes.py  indep.py  loglib.py  overlap.py  pagemap.py  sheets.py  texset.py  watchdec.py
